[gd_scene load_steps=5 format=3 uid="uid://r3gu3lrvbieq"]

[ext_resource type="Texture2D" uid="uid://cgh7q6cbblay0" path="res://Arts/Boulder.png" id="1_i34v6"]
[ext_resource type="Script" uid="uid://cvouk6gyyw3a7" path="res://Objs/Boulder/boulder.gd" id="1_upmpe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i34v6"]
size = Vector2(60, 46)

[sub_resource type="CircleShape2D" id="CircleShape2D_upmpe"]
radius = 128.0

[node name="Boulder" type="Node2D"]
script = ExtResource("1_upmpe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_i34v6")

[node name="Hitbox" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, 8)
shape = SubResource("RectangleShape2D_i34v6")

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2(1, 8)
shape = SubResource("RectangleShape2D_i34v6")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2(1, 8)
shape = SubResource("CircleShape2D_upmpe")

[connection signal="mouse_entered" from="Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_area_mouse_exited"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
